--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
         {{>header}}
         <!--file name of partials header-->
 
+        <p>This site was created by Alex Dinh. It uses data from mapbox.com and darksky.net</p>
         <p id="p-header">{{name}}</p>
         <img class="portrait" src="/img/ironman.jpg">
     </div>
